cmss/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>