cmss/main/default/objects/Account/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <formula>&quot;Přístup do KZ: &quot; &amp; ClientZoneAccess__c &amp; BR() &amp;
&quot;Datum příští aktualizace AML: &quot; &amp; IF(NOT(ISBLANK( NextAmlReviewDate__c )), TEXT(DAY(NextAmlReviewDate__c))&amp; &quot;.&quot; &amp; TEXT(MONTH(NextAmlReviewDate__c)) &amp; &quot;.&quot; &amp; TEXT(YEAR(NextAmlReviewDate__c)), &quot; &quot;)</formula>
    <label>Additional Information</label>
    <type>Text</type>
</CustomField>