cmss/main/default/objects/Account/fields/AddressingNonpersonalized__c.field-meta.xml
<CustomField>
    <fullName>AddressingNonpersonalized__c</fullName>
    <label> Addressing Nonpersonalized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>