cmss/main/default/objects/Account/fields/AddressingPersonalized__c.field-meta.xml
<CustomField>
    <fullName>AddressingPersonalized__c</fullName>
    <label>Addressing Personalized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>