cmss/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( NOT( ISBLANK( Birthdate__c ) ) ,
    IF( DATE( 2000 , MONTH( Birthdate__c ) , DAY( Birthdate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
        YEAR (Today()) - YEAR ( Birthdate__c ),
        YEAR (Today()) - YEAR ( Birthdate__c ) -1 ),
    null)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>