cmss/main/default/objects/Account/fields/AmountOffer__c.field-meta.xml
<CustomField>
    <fullName>AmountOffer__c</fullName>
    <description>Dostupná výše úvěru pro zajištění</description>
    <inlineHelpText>Dostupná výše úvěru pro zajištění</inlineHelpText>
    <label>Amount Offer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>