cmss/main/default/objects/Account/fields/AssetCount__c.field-meta.xml
<CustomField>
    <fullName>AssetCount__c</fullName>
    <label>Asset Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>