cmss/main/default/objects/Account/fields/AssetLastCloseDate__c.field-meta.xml
<CustomField>
    <fullName>AssetLastCloseDate__c</fullName>
    <label>Asset Last Close Date</label>
    <type>Date</type>
</CustomField>