cmss/main/default/objects/Account/fields/BankSegment__c.field-meta.xml
<CustomField>
    <fullName>BankSegment__c</fullName>
    <label>Bank Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>