cmss/main/default/objects/Account/fields/BankSegmentLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>BankSegmentLastUpdate__c</fullName>
    <description>Poslední datum platnosti bankovní segmentace</description>
    <label>Bank Segment Last Update</label>
    <type>Date</type>
</CustomField>