cmss/main/default/objects/Account/fields/BillingHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseNumber__c</fullName>
    <description>Č. p. / Č. o.</description>
    <label>Billing House Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>