cmss/main/default/objects/Account/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <description>Hlavní ulice</description>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>