cmss/main/default/objects/Account/fields/BirthCountry__c.field-meta.xml
<CustomField>
    <fullName>BirthCountry__c</fullName>
    <label>Birth Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryPicklist</valueSetName>
    </valueSet>
</CustomField>