cmss/main/default/objects/Account/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Datum narození</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>