cmss/main/default/objects/Account/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Datum příštích narozenin</description>
    <formula>IF(date(year(today()),month( Birthdate__c ),DAY( Birthdate__c ))&lt;today(), date(year(today())+1,month( Birthdate__c ),DAY( Birthdate__c )), date(year(today()),month( Birthdate__c ),DAY( Birthdate__c )))</formula>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>