cmss/main/default/objects/Account/fields/BridgeLoanCount__c.field-meta.xml
<CustomField>
    <fullName>BridgeLoanCount__c</fullName>
    <label>Bridge Loan Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>