cmss/main/default/objects/Account/fields/BuildingSavingsCount__c.field-meta.xml
<CustomField>
    <fullName>BuildingSavingsCount__c</fullName>
    <description>Number of related Assets in active state and in Building Savings record type</description>
    <label>Building Savings Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>