cmss/main/default/objects/Account/fields/BuildingSavingsOnly__c.field-meta.xml
<CustomField>
    <fullName>BuildingSavingsOnly__c</fullName>
    <description>Klienti pouze se stavebním spořením</description>
    <formula>AND(AssetCount__c= BuildingSavingsCount__c, BuildingSavingsCount__c&gt;0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Savings Only</label>
    <type>Checkbox</type>
</CustomField>