cmss/main/default/objects/Account/fields/ChannelsAllowed__c.field-meta.xml
<CustomField>
    <fullName>ChannelsAllowed__c</fullName>
    <formula>IF(
TEXT(AddressingNonpersonalized__c) = &quot;Ne&quot;,
&quot;NEOSLOVOVAT&quot;,
IF ( 
TEXT(AddressingNonpersonalized__c) = &quot;Ano&quot;,
&quot;Telefon,SMS, dopis, e-mail, el. portály + mobil. aplikace&quot;,
IF (
TEXT (AddressingNonpersonalized__c) = &quot;Ano omezené&quot;,
&quot;SMS, e-mail&quot;,
null
)
))</formula>
    <inlineHelpText>Povolené kanály pro nepersonalizované oslovení</inlineHelpText>
    <label>Channels Allowed</label>
    <type>Text</type>
</CustomField>