cmss/main/default/objects/Account/fields/ClientCase__c.field-meta.xml
<CustomField>
    <fullName>ClientCase__c</fullName>
    <description>Příznak, jestli má klient aktivní klientské podání</description>
    <label>Client Case</label>
    <length>3</length>
    <type>Text</type>
</CustomField>