cmss/main/default/objects/Account/fields/ClientZoneAccess__c.field-meta.xml
<CustomField>
    <fullName>ClientZoneAccess__c</fullName>
    <description>Information about KZ access</description>
    <label>Client Zone Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>