cmss/main/default/objects/Account/fields/ClientZonewithLatestAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>ClientZonewithLatestAgreementDate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Zone with Latest Created Date</label>
    <referenceTo>ClientZone__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>