cmss/main/default/objects/Account/fields/CmssEmployee__c.field-meta.xml
<CustomField>
    <fullName>CmssEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMSS Employee</label>
    <type>Checkbox</type>
</CustomField>