cmss/main/default/objects/Account/fields/Co_ownership__c.field-meta.xml
<CustomField>
    <fullName>Co_ownership__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>