cmss/main/default/objects/Account/fields/CombinedName__c.field-meta.xml
<CustomField>
    <fullName>CombinedName__c</fullName>
    <description>Combine the important information to be shown in the pinned part of compact layout.</description>
    <formula>IF( IsPersonAccount = true,
	
    IF( ISBLANK( PersonTitle ), &quot;&quot;, PersonTitle &amp; &quot; &quot; ) &amp; FirstName &amp; &quot; &quot; &amp; LastName &amp; BLANKVALUE( Suffix , &quot;&quot; ) &amp; &quot;, RČ: &quot; &amp; PersonalIdentificationNr__c  &amp; &quot;, tel.: &quot; &amp; Phone
		 	,
			 Name &amp; &quot;, IČO: &quot; &amp; CompanyRegistrationNumber__c &amp; &quot;, tel.: &quot; &amp; Phone)</formula>
    <label>Combined Name</label>
    <type>Text</type>
</CustomField>