cmss/main/default/objects/Account/fields/CompanyEmail__c.field-meta.xml
<CustomField>
    <fullName>CompanyEmail__c</fullName>
    <description>Email PO</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>