cmss/main/default/objects/Account/fields/CompanyEndDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyEndDate__c</fullName>
    <description>Datum zániku PO</description>
    <label>Company End Date</label>
    <type>Date</type>
</CustomField>