cmss/main/default/objects/Account/fields/CompanyRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegistrationNumber__c</fullName>
    <description>IČO</description>
    <label>Company Registation Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>