cmss/main/default/objects/Account/fields/ConsentChangedToday__c.field-meta.xml
<CustomField>
    <fullName>ConsentChangedToday__c</fullName>
    <formula>ConsentManualChange__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Changed Today</label>
    <type>Checkbox</type>
</CustomField>