cmss/main/default/objects/Account/fields/ConsentManualChange__c.field-meta.xml
<CustomField>
    <fullName>ConsentManualChange__c</fullName>
    <description>Date in this fields indicates that any consent or internal consent was manually edited and thus displayed data can be out-of-date</description>
    <label>Consent Manual Change</label>
    <type>Date</type>
</CustomField>