cmss/main/default/objects/Account/fields/Consents__c.field-meta.xml
<CustomField>
    <fullName>Consents__c</fullName>
    <formula>&quot;Nepersonalizované oslovení: &quot; &amp; CASE(AddressingNonpersonalized__c,
&quot;0&quot;,&quot;Ne&quot;,
&quot;1&quot;, &quot;Ano&quot;,
&quot;2&quot;, &quot;Ano omezené&quot;,
&quot;&quot;) &amp; BR() &amp;
&quot;Povolené kanály: &quot; &amp; ChannelsAllowed__c</formula>
    <label>Consents</label>
    <type>Text</type>
</CustomField>