cmss/main/default/objects/Account/fields/ConsolidatedPersonNr__c.field-meta.xml
<CustomField>
    <fullName>ConsolidatedPersonNr__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Consolidated Person Number</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>