cmss/main/default/objects/Account/fields/ConsolidationResult__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationResult__c</fullName>
    <label>Consolidation Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>