cmss/main/default/objects/Account/fields/CreditAndIntermediateLoanCount__c.field-meta.xml
<CustomField>
    <fullName>CreditAndIntermediateLoanCount__c</fullName>
    <description>Počet úvěrů a meziúvěrů, plněno pomocí DLRS</description>
    <label>Credit and Intermediate Loan Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>