cmss/main/default/objects/Account/fields/CreditCaseCount__c.field-meta.xml
<CustomField>
    <fullName>CreditCaseCount__c</fullName>
    <description>Počet úvěrových případů, plněno pomocí DLRS</description>
    <label>Credit Case Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>