cmss/main/default/objects/Account/fields/CreditCount__c.field-meta.xml
<CustomField>
    <fullName>CreditCount__c</fullName>
    <label>Credit Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>