cmss/main/default/objects/Account/fields/CryptoCurrenciesList__c.field-meta.xml
<CustomField>
    <fullName>CryptoCurrenciesList__c</fullName>
    <label>Crypto Currencies List</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>