cmss/main/default/objects/Account/fields/CryptoCurrencyPlatform__c.field-meta.xml
<CustomField>
    <fullName>CryptoCurrencyPlatform__c</fullName>
    <label>Crypto Currency Platform</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>