cmss/main/default/objects/Account/fields/CsId__c.field-meta.xml
<CustomField>
    <fullName>CsId__c</fullName>
    <description>CS Id</description>
    <externalId>true</externalId>
    <label>CS Id</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>