cmss/main/default/objects/Account/fields/CSOBLoansCount__c.field-meta.xml
<CustomField>
    <fullName>CSOBLoansCount__c</fullName>
    <label>CSOB Loans Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>