cmss/main/default/objects/Account/fields/CSOBSNonClient__c.field-meta.xml
<CustomField>
    <fullName>CSOBSNonClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSOBS Non Client</label>
    <type>Checkbox</type>
</CustomField>