cmss/main/default/objects/Account/fields/CsobStatus__c.field-meta.xml
<CustomField>
    <fullName>CsobStatus__c</fullName>
    <description>ČSOB klient status
- bude nový číselník a pak picklist</description>
    <label>Csob Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>