cmss/main/default/objects/Account/fields/CurrentAccountCount__c.field-meta.xml
<CustomField>
    <fullName>CurrentAccountCount__c</fullName>
    <description>Number of Assets in active state and in CSOB Current Account record type</description>
    <label>Current Account Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>