cmss/main/default/objects/Account/fields/CurrentPreApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentPreApprovedAmount__c</fullName>
    <description>Aktuální předschválená částka SÚ</description>
    <label>Current Pre Approved Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>