cmss/main/default/objects/Account/fields/CurrPreApprovedAmountValidFrom__c.field-meta.xml
<CustomField>
    <fullName>CurrPreApprovedAmountValidFrom__c</fullName>
    <description>Platnost od aktuální částky</description>
    <label>Current Pre Approved Amount Valid From</label>
    <type>Date</type>
</CustomField>