cmss/main/default/objects/Account/fields/CurrPreApprovedAmountValidTo__c.field-meta.xml
<CustomField>
    <fullName>CurrPreApprovedAmountValidTo__c</fullName>
    <description>Platnost do aktuální částky</description>
    <label>Current Pre Approved Amount Valid To</label>
    <type>Date</type>
</CustomField>