cmss/main/default/objects/Account/fields/DataBoxNumber__c.field-meta.xml
<CustomField>
    <fullName>DataBoxNumber__c</fullName>
    <description>Číslo datové schránky</description>
    <label>Data Box Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>