cmss/main/default/objects/Account/fields/DateOfCreation__c.field-meta.xml
<CustomField>
    <fullName>DateOfCreation__c</fullName>
    <description>Datum vzniku PO</description>
    <label>Date of Creation</label>
    <type>Date</type>
</CustomField>