cmss/main/default/objects/Account/fields/DateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeath__c</fullName>
    <description>Datum úmrtí FO</description>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>