cmss/main/default/objects/Account/fields/DateOfDeletion__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeletion__c</fullName>
    <label>Date Of Deletion</label>
    <type>DateTime</type>
</CustomField>