cmss/main/default/objects/Account/fields/DateOfRegistration__c.field-meta.xml
<CustomField>
    <fullName>DateOfRegistration__c</fullName>
    <description>Datum zápisu do OR</description>
    <label>Date of Registration</label>
    <type>Date</type>
</CustomField>