cmss/main/default/objects/Account/fields/DateOfStayFrom__c.field-meta.xml
<CustomField>
    <fullName>DateOfStayFrom__c</fullName>
    <description>Datum začátku pobytu (pro cizince)</description>
    <label>Date of Stay From</label>
    <type>Date</type>
</CustomField>