cmss/main/default/objects/Account/fields/DateOfStayUntil__c.field-meta.xml
<CustomField>
    <fullName>DateOfStayUntil__c</fullName>
    <description>Datum konce pobytu (pro cizince)</description>
    <label>Date of Stay Until</label>
    <type>Date</type>
</CustomField>