cmss/main/default/objects/Account/fields/EmployerICO__c.field-meta.xml
<CustomField>
    <fullName>EmployerICO__c</fullName>
    <label>Employer ICO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>