cmss/main/default/objects/Account/fields/FirstCsProductDate__c.field-meta.xml
<CustomField>
    <fullName>FirstCsProductDate__c</fullName>
    <description>Datum sjednání první CS smlouvy</description>
    <label>First CS Product Date</label>
    <type>Date</type>
</CustomField>