cmss/main/default/objects/Account/fields/FirstProductStartDate__c.field-meta.xml
<CustomField>
    <fullName>FirstProductStartDate__c</fullName>
    <description>Datum sjednání první smlouvy</description>
    <label>First Product Start Date</label>
    <type>Date</type>
</CustomField>