cmss/main/default/objects/Account/fields/FirstSbProductDate__c.field-meta.xml
<CustomField>
    <fullName>FirstSbProductDate__c</fullName>
    <description>Datum sjednání prvního kmenového produktu</description>
    <label>First SB Product Date</label>
    <type>Date</type>
</CustomField>