cmss/main/default/objects/Account/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <formula>BillingStreet  + &quot;, &quot; +  BillingCity + &quot;, &quot; +  BillingPostalCode + &quot;, &quot; +  BillingState</formula>
    <label>FullAddress</label>
    <type>Text</type>
</CustomField>