cmss/main/default/objects/Account/fields/FuturePreApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>FuturePreApprovedAmount__c</fullName>
    <label>Future Pre Approved Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>