cmss/main/default/objects/Account/fields/FuturePreApprovedAmountValidFrom__c.field-meta.xml
<CustomField>
    <fullName>FuturePreApprovedAmountValidFrom__c</fullName>
    <description>Platnost od budoucí částky</description>
    <label>Future Pre Approved Amount Valid From</label>
    <type>Date</type>
</CustomField>