cmss/main/default/objects/Account/fields/FuturePreApprovedAmountValidTo__c.field-meta.xml
<CustomField>
    <fullName>FuturePreApprovedAmountValidTo__c</fullName>
    <description>Platnost do budoucí částky</description>
    <label>Future Pre Approved Amount Valid To</label>
    <type>Date</type>
</CustomField>