cmss/main/default/objects/Account/fields/GDPRCase__c.field-meta.xml
<CustomField>
    <fullName>GDPRCase__c</fullName>
    <description>GDPR Case</description>
    <label>GDPR Case</label>
    <length>3</length>
    <type>Text</type>
</CustomField>