cmss/main/default/objects/Account/fields/GlobalId__c.field-meta.xml
<CustomField>
    <fullName>GlobalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Global Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>