cmss/main/default/objects/Account/fields/GroupSegment__c.field-meta.xml
<CustomField>
    <fullName>GroupSegment__c</fullName>
    <description>Skupinová segmentace</description>
    <label>Group Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>240</fullName>
                <label>Skupinový klient (aktivní BÚ + další produkt ve skupině)</label>
            </value>
            <value>
                <fullName>241</fullName>
                <label>Skupinový klient (aktivní BÚ + další produkt ve skupině))</label>
            </value>
            <value>
                <fullName>242</fullName>
                <label>S neaktivním BÚ a s dalším produktem ve skupině</label>
            </value>
            <value>
                <fullName>243</fullName>
                <label>Bez BÚ a s dalším produktem ve skupině</label>
            </value>
            <value>
                <fullName>244</fullName>
                <label>S aktivním BÚ a bez dalšího produktu ve skupině</label>
            </value>
            <value>
                <fullName>245</fullName>
                <label>S neaktivním BÚ a bez dalšího produktu ve skupině</label>
            </value>
            <value>
                <fullName>246</fullName>
                <label>Bez BÚ a s depozitním produktem ve skupině</label>
            </value>
            <value>
                <fullName>247</fullName>
                <label>Bez BÚ a s dalším produktem ve skupině.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>