cmss/main/default/objects/Account/fields/GroupSegmentLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>GroupSegmentLastUpdate__c</fullName>
    <description>Poslední datum platnosti skupinové segmentace</description>
    <label>Group Segment Last Update</label>
    <type>Date</type>
</CustomField>