cmss/main/default/objects/Account/fields/HasCryptoCurrency__c.field-meta.xml
<CustomField>
    <fullName>HasCryptoCurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Crypto Currency</label>
    <type>Checkbox</type>
</CustomField>