cmss/main/default/objects/Account/fields/HasCSOBId__c.field-meta.xml
<CustomField>
    <fullName>HasCSOBId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CSOBId</label>
    <type>Checkbox</type>
</CustomField>