cmss/main/default/objects/Account/fields/HasCsProduct__c.field-meta.xml
<CustomField>
    <fullName>HasCsProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Má CS produkt</description>
    <label>Has CS Product</label>
    <type>Checkbox</type>
</CustomField>