cmss/main/default/objects/Account/fields/HasEmail__c.field-meta.xml
<CustomField>
    <fullName>HasEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Email</label>
    <type>Checkbox</type>
</CustomField>