cmss/main/default/objects/Account/fields/HasPhone__c.field-meta.xml
<CustomField>
    <fullName>HasPhone__c</fullName>
    <formula>IF(ISBLANK(Phone), false, true)</formula>
    <label>Has Phone</label>
    <type>Checkbox</type>
</CustomField>