cmss/main/default/objects/Account/fields/HasSbProduct__c.field-meta.xml
<CustomField>
    <fullName>HasSBProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Má kmenový produkt</description>
    <label>Has SB Product</label>
    <type>Checkbox</type>
</CustomField>