cmss/main/default/objects/Account/fields/IDCardIssuedBy__c.field-meta.xml
<CustomField>
    <fullName>IDCardIssuedBy__c</fullName>
    <label>ID Card Issued By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>