cmss/main/default/objects/Account/fields/IdCardNumber__c.field-meta.xml
<CustomField>
    <fullName>IdCardNumber__c</fullName>
    <description>Číslo dokladu</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Id Card Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>