cmss/main/default/objects/Account/fields/IdCardType__c.field-meta.xml
<CustomField>
    <fullName>IdCardType__c</fullName>
    <description>Typ dokladu</description>
    <label>Id Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>