cmss/main/default/objects/Account/fields/IDCardValidityUnlimited__c.field-meta.xml
<CustomField>
    <fullName>IDCardValidityUnlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Card Validity Unlimited</label>
    <type>Checkbox</type>
</CustomField>