cmss/main/default/objects/Account/fields/IdCardValidTo__c.field-meta.xml
<CustomField>
    <fullName>IdCardValidTo__c</fullName>
    <description>Platnost dokladu do</description>
    <label>Id Card Valid To</label>
    <type>Date</type>
</CustomField>